--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "jimp": "^0.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^4.1.5",
+    "react-image-crop": "^10.0.0",
+    "react-modal": "^3.14.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
